Reference_Docs/cloudFormation/labs/lab-3-create-env/vpc_1-public-1-private-NAT.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: "AWS CloudFormation Template to create a VPC with one public subnet and a private on"

Mappings:
  CIDRConfig:
    VPC:
      CIDR: 10.10.0.0/16
    Public:
      CIDR: 10.10.0.0/17
    Private:
      CIDR: 10.10.128.0/17

Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      CidrBlock: !FindInMap 
        - CIDRConfig
        - VPC
        - CIDR
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-vpc'

  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap 
        - CIDRConfig
        - Public
        - CIDR
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-public'

  PrivateSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !FindInMap 
        - CIDRConfig
        - Private
        - CIDR
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-private'

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-IGW'

  GatewayToInternet:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
 
  NAT:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 
        - EIP
        - AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NAT'
  EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
 

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-publicRT'

  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-privateRT'

  PrivateRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: NAT
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NAT

  PrivateSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

Outputs:

  VPCId:
    Description: VPCId of the newly created VPC
    Value: !Ref VPC
    Export:
      Name: 'E91VPC'

  PublicSubnet:
    Description: SubnetId of the public subnet
    Value: !Ref PublicSubnet
    Export:
      Name: 'E91PublicSub'

  PrivateSubnet:
    Description: SubnetId of the private subnet
    Value: !Ref PrivateSubnet
    Export:
      Name: !Sub 'E91PrivateSub'
